<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">peppersp</string>
    <string name="controlhead">Control Panel Settings</string>
    <string name="Passset">Password Settings</string>
    <string name="emerno">Emergency Numbers</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_password_settings">PasswordSettings</string>
    <string name="title_activity_emergency_no_setting">EmergencyNoSetting</string>
    <string name="oldpass">Enter Old Password</string>
    <string name="newpass">Enter New Password</string>
    <string name="reenter">Re Enter Password  </string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

</resources>